ui/apps/themes/components/window.less
/* ... */
.window-body {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    white-space: normal;
    z-index: 1;
    .user-select(text);
}

.window-content {
    top: 0;
    z-index: 2;
    background-color: @background;
    overflow: hidden;
    outline: 0;

    textarea {
        .user-select(text);
        resize: none;
    }
}

.leftside {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 320px;
    background-color: @background;
    overflow: hidden;
}

.rightside {
    outline: 0;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 320px;
    background-color: @background;
    overflow: auto;
}

.floating-window {

    // needed or you move the UI when the window overlaps at the right side or bottom
    position: fixed;
    // higher than taskbar
    z-index: 12;
    background: transparent;
    outline: 0;

    .floating-window-content { .elevation-2(); }
    &.active {
        z-index: 14;
        .floating-window-content { .elevation-3(); }
        .floating-header {
            background: #333;
            h1 {
                color: white;
            }
            .controls {
                button {
                    color: white;
                }
            }
        }
    }

    .window-body, .container {
        width: 100%;
    }

    width: 920px;
    height: 750px;

    &.height-md {
        height: 650px;
    }

    right: auto;
    bottom: auto;
    // start window in the middle
    top: ~"calc(50% - 375px)";

    /* width */
    &.width-xs {
        width: 640px;
        // start window in the middle
        left: ~"calc(50% - 320px)";
    }
    &.width-sm {
        width: 720px;
        // start window in the middle
        left: ~"calc(50% - 360px)";
    }
    &.width-md {
        width: 800px;
        // start window in the middle
        left: ~"calc(50% - 400px)";
    }
    &.width-lg {
        width: 920px;
        // start window in the middle
        left: ~"calc(50% - 460px)";
    }

    .floating-header .controls button[data-action="normal"] {
        display: none;
    }

    .container {
        width: 100% !important;
        position: relative;
        min-width: auto;
    }

    &.width-xs:not(.maximized) [data-hidden="xs"] { display: none; }

    &.maximized {
        width: 1060px;
        height: ~"calc(100% - 72px)";
        top: 36px;
        left: ~"calc(50% - 530px)";

        @media (max-height: 750px) {
            height: 100%;
        }

        .floating-header .controls button[data-action="maximized"] {
            display: none;
        }
    }

    &.dragging iframe {
        pointer-events: none;
    }

    @headerHeight: 32px;
    .ios & {
        &.header-top .window-header  { position: relative; }
    }

    .floating-header {
        height: @headerHeight;
        bottom: auto;
        background: #e0e0e0;
        padding: 0 8px 0 16px;
        display: flex;


        cursor: move;

        h1 {
            margin: 0;
            padding: 0;
            font-size: 13px;
            font-weight: bold;
            line-height: @headerHeight;
            color: #636363;
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
        }
        .count {
            padding: 3px 7px;
            position: relative;
            top: -1px;
            margin-left: 8px;
        }
        .controls {
            margin-left:auto;
            flex-shrink: 0;

            button {
                color: #5b5b5b;
                line-height: @headerHeight - 2;
                padding: 0 8px;
                display: inline-block;
                &[data-action="close"] {
                    font-size: 18px;
                }
                &:focus {
                    box-shadow: none;
                    outline: 2px solid #A0A0A0;
                    outline-offset: -4px;
                }
            }
        }
    }

    .floating-body {
        top: @headerHeight;
        background-color: white;
        border: 1px solid rgba(0, 0, 0, 0.15);
        border-width: 0 1px 1px 1px;
    }
}

// used to prevent iframe issues when dragging
#floating-window-backdrop {
    z-index: 13;
    height: 100%;
    width: 100%;
    top: 0;
    // almost transparent
    background-color: rgba(255, 255, 255, 0.01);
    position: absolute;
}

.rightside-navbar { display: none; }

@media (max-width: 900px) {
    .leftside { width: 250px; }
    .rightside { left: 250px; }

    #io-ox-taskbar-container #io-ox-taskbar {
        padding: 0 4px;

        li {
            margin-left: 4px;
        }
    }
}

@media (min-width: 1300px) {
    .leftside  { width: 400px; }
    .rightside { left:  400px; }
}

@media (min-width: 1500px) {
    .leftside {  width: 450px; }
    .rightside { left:  450px; }
}

@media (min-width: 1700px) {
    .leftside { width: 500px; }
    .rightside { left: 500px; }
}
/* ... */

